--- a/index.html
+++ b/index.html
@@ -60,17 +60,21 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                            <!--TODO : プロフィール画面を受け取ったら更新 -->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>いふろさん</h4>
+                                <p>大阪を中心に仕事、プログラマー</p>
+                                <p>関西Javaエンジニア</p>
+                                <p>業務Webアプリ開発</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>うらがみさん</h4>
+                                <p>大阪プログラマー。GitHubを利用。</p>
+                                <p>一年間毎日コミットをしてる。</p>
                             </div>
                         </div>
                     </article>
